# crime-data-etl

./: COLLABORATORS.md  Pipfile  README.md  data.json  main.py  pyproject.toml
.github/workflows/: pytest.yml
resources/: data.json
tests/: test_downloading_data.py  test_output_format.py  test_processing.py
